Add final comments //TODO: print relations

--- a/laboratory_1/Relazione_3.tex
+++ b/laboratory_1/Relazione_3.tex
@@ -155,6 +155,10 @@ Arrotondando:
 	\end{equation}
 \end{Large}\\
 
+Una sonda compensata è composta da una resistenza elevata in parallelo ad un condensatore di capacità variabile (compensatore).
+
+Grazie a quest'ultima, è possibile annullare l'effetto di carico per segnali ad alte frequenze (più di 5 kHz) e di ampiezza sufficientemente alta rispetto al rumore.
+
 \subsubsection{Tempo di salita con sonda compensata 10x}
 
 \begin{Large}
