--- a/laboratory_2/Relazione_4.tex
+++ b/laboratory_2/Relazione_4.tex
@@ -50,6 +50,12 @@
 
 \lstset{language=Matlab}
 
+\section {Introduzione}
+Lo scopo di questa attività di laboratorio è quello di effettuare la misura di una resistenza di una barra in rame con il metodo di confronto a caduta di tensione.
+
+Si utilizza il metodo a quattro morsetti poichè normalmente sorgerebbero dei problemi dovuti alle resistenze di contatto
+morsetti-resistore ed alle resistenze dei collegamenti, che non sarebbero trascurabili rispetto alla resistenza incognita della barra di rame.
+
 \section {Incertezza su grandezze dimensionali}
 %TODO:  aggiungere commento @paolo 
 \subsection{Misure con centimetro estensibile}
@@ -76,7 +82,7 @@ L'unica incertezza che interressa le misure effettuate con il centimetro è l'in
 	\Delta_x=2U_{\lambda_{min}} = 0.5 mm 
 	\end{equation}
 \end{Large}
-Si è calcolata lincertezza delle relative misure: 
+Si è calcolata l'incertezza delle relative misure: 
 \begin{Large} 
 	\begin{equation}
 		l_a = 1180\pm0.5mm
