L ast S hort D efinitive commit With Beatles and black holes

--- a/exercise_2/Relazione_2.tex
+++ b/exercise_2/Relazione_2.tex
@@ -32,7 +32,7 @@
 		- Ingegneria Informatica e dell'Automazione -
 }}
 \author{A cura di:\\
-	Laura Loperfino\\
+	Laura Loperfido\\
 	Andrea Lops \\
 	Teresa Pantone\\
 	Paolo Rotolo\\
