--- a/laboratory_2/Relazione_4.tex
+++ b/laboratory_2/Relazione_4.tex
@@ -33,7 +33,7 @@
 		- Ingegneria Informatica e dell'Automazione -
 }}
 \author{A cura di:\\
-	Laura Loperfino\\
+	Laura Loperfido\\
 	Andrea Lops \\
 	Teresa Pantone\\
 	Paolo Rotolo\\
@@ -84,10 +84,10 @@ L'unica incertezza che interressa le misure effettuate con il centimetro è l'in
 Si è calcolata l'incertezza delle relative misure: 
 \begin{Large} 
 	\begin{equation}
-		l_a = 1180\pm0.5mm
+		l_a = (1180\pm0.5)mm
 	 \end{equation}
 	 \begin{equation}
-		l_v = 1000\pm0.5mm
+		l_v = (1000\pm0.5)mm
 	 \end{equation}
 \end{Large}
 \subsection{Misure col calibro digitale}
@@ -100,7 +100,7 @@ Si è calcolata l'incertezza delle relative misure:
 Per quanto riguarda invece le misure effettuate col calibro digitale si ha: 
 \begin{Large} 
 	\begin{equation}
-		U_{calibro} = 0.01 + |0.02| = 0.03mm
+		U_{calibro}  = 0.02mm
 	 \end{equation}
 \end{Large}
 Letto dalle specifiche del calibro
@@ -113,10 +113,10 @@ Letto dalle specifiche del calibro
 \\Si è calcolata lincertezza delle relative misure: 
 \begin{Large} 
 	\begin{equation}
-		w = 30.08\pm0.03mm
+		w = (30.08\pm0.02)mm
 	 \end{equation}
 	 \begin{equation}
-		h = 3.05\pm0.03mm
+		h = (3.05\pm0.02)mm
 	 \end{equation}
 \end{Large}
 \subsection{Misure di superfici}
@@ -135,7 +135,7 @@ Con relativa incertezza:
 E quindi: 
 \begin{Large} 
 	\begin{equation}
-		S =91.7\pm 1.0mm^2
+		S =(91.7\pm 1.0)mm^2
 	 \end{equation}
 \end{Large}
 Invece:
@@ -153,7 +153,7 @@ Con relativa incertezza:
 E quindi: 
 \begin{Large} 
 	\begin{equation}
-		S_L =78200\pm 300mm^2
+		S_L =(78200\pm 300)mm^2
 	 \end{equation}
 \end{Large}
 \subsection{Stima del valore del provino in rame}
@@ -169,7 +169,7 @@ Con la relativa incertezza
 		U_{R_{X_{m}}} = \varphi\frac{d\frac{\varphi*l_v}{s}}{dl_v}U{l_v}+\varphi\frac{d\frac{\varphi*l_v}{s}}{dS}U{S}
 	 \end{equation}
 	 \begin{equation}
-		R_{X_{m}} =0.192\pm 0.004 m \Omega
+		R_{X_{m}} =(0.192\pm 0.004 )m \Omega
 	 \end{equation}
 \end{Large}
 
@@ -211,7 +211,7 @@ Adoperando due morsetti si è arrivati alla misurazione della seguente resistenz
 		U_{R_{X2W}} = [\pm 0.01\%rdg \pm 0.004\% FSO]
 	 \end{equation}
 	 \begin{equation}
-		R_{X2W} = 33.4 \pm 4.3m \Omega
+		R_{X2W} = (33.4 \pm 4.3)m \Omega
 	 \end{equation}
 \end{Large}
 Purtroppo però la misura è \emph{errata} a causa delle resistenze dei due puntali, che infatti sono dotati di resistenza interna di ordine di grandezza confrontabile con quello della misura stessa.
@@ -225,7 +225,7 @@ Il problema è fortunatamnete di facile risoluzione, compensando i puntali stess
 		U_{R_{X2W_{2}}} = [\pm 0.01\%rdg \pm 0.004\% FSO]
 	 \end{equation}
 	 \begin{equation}
-		R_{X2W_{2}} = 0.007 \pm 0.004 \Omega
+		R_{X2W_{2}} = (0.007 \pm 0.004) \Omega
 	 \end{equation}
 \end{Large}
 \subsection{Misura della resistenza mediante quattro morsetti}
@@ -239,7 +239,7 @@ ciò che andremo a misurare è praticamente rumore nonostante si è usata la con
 		U_{R_{X4W}} = [\pm 0.01\%rdg \pm 0.004\% FSO]
 	 \end{equation}
 	 \begin{equation}
-		R_{X4W} = 2.9\pm 4m \Omega
+		R_{X4W} = (2.9\pm 4.0)m \Omega
 	 \end{equation}
 \end{Large}
 \subsection{Misura di resistenza con il metodo amperometrico}
@@ -258,7 +258,7 @@ Per ottenere la resistenza $R_{X_{VA}}$ si è andati a calcolare prima $I_{VA}$ 
 		U_{I_{VA}} = [\pm 0.3\%rdg \pm 10\% FSO]
 	 \end{equation}
 	 \begin{equation}
-		I_{VA} = 4.9 \pm 0.5 A
+		I_{VA} = (4.9 \pm 0.5) A
 	 \end{equation}
 \end{Large}
 
@@ -270,7 +270,7 @@ Per ottenere la resistenza $R_{X_{VA}}$ si è andati a calcolare prima $I_{VA}$ 
 		U_{V_{VA}} = [\pm 0.005\%rdg \pm 0.0035\% FSO]
 	 \end{equation}
 	 \begin{equation}
-		V_{VA} = 0.96 \pm 0.004 mV
+		V_{VA} = (0.96 \pm 0.004) mV
 	 \end{equation}
 \end{Large}
 E successivamente la resistenza:
@@ -282,7 +282,7 @@ E successivamente la resistenza:
 		U_{R_{X_{VA}}} = (\frac{U_{V_{VA}}}{V_{VA}}+\frac{U_{I_{VA}}}{I_{VA}})R_{X_{VA}}
 	 \end{equation}
 	 \begin{equation}
-		R_X{_{VA}} = 0.00019\pm 0.00002\Omega
+		R_X{_{VA}} = (0.00019\pm 0.00002)\Omega
 	 \end{equation}
 \end{Large}
 
@@ -298,10 +298,10 @@ Prendiamo l'incertezza che ci riguarda per il multimetro:
 E quindi si ottiene:
 \begin{Large} 
 	\begin{equation}
-		V_X = 0.817 \pm 0.004 mV
+		V_X = (0.817 \pm 0.004) mV
 	 \end{equation}
 	 \begin{equation}
-		V_C = 0.503 \pm 0.004 mV
+		V_C = (0.503 \pm 0.004) mV
 	 \end{equation}
 \end{Large}
 \subsection{Calcolo del rapporto delle tensioni}
@@ -330,7 +330,7 @@ Otteniamo:
 		U_{R_{X_{CdT}}} =(\frac{U_{R_c}}{R_c}+ \frac{U_r}{r})R_{X_{CdT}}= 0.00201 m\Omega
 	 \end{equation}
 	 \begin{equation}
-		R_{X_{CdT}} = 0.162 \pm 0.002  m\Omega
+		R_{X_{CdT}} = (0.162 \pm 0.002 ) m\Omega
 	 \end{equation}
 \end{Large}
 
@@ -343,7 +343,7 @@ Otteniamo:
 		U_{\rho_{X_{CdT}}} = \frac{S}{l_V}*U_{R_{X_{CdT}}}+\frac{R_{X_{CdT}}}{l_V}*U_S+\frac{S*R_{X_{CdT}}}{{l_V}^2}*U_{l_V}
 	 \end{equation}
 	 \begin{equation}
-		\rho_{X_{CdT}} = (1.489\pm 0.001)*10^{-8} \Omega*m
+		\rho_{X_{CdT}} = ((1.489\pm 0.001)*10^{-8} )\Omega*m
 	 \end{equation}
 \end{Large}
 \end{document}
