--- a/laboratory_1/Relazione_3.tex
+++ b/laboratory_1/Relazione_3.tex
@@ -32,7 +32,7 @@
 		- Ingegneria Informatica e dell'Automazione -
 }}
 \author{A cura di:\\
-	Laura Loperfino\\
+	Laura Loperfido\\
 	Andrea Lops \\
 	Teresa Pantone\\
 	Paolo Rotolo\\
@@ -82,9 +82,9 @@ Il valore della resistenza letto sul multimetro è  9.8887 k$\Omega$. Si sceglie
 		U_{R} = [\pm 0.010\%rdg \pm 0.001\% FSO]
 	 \end{equation}
 	 
-	 \begin{eqnarray*} 
-	 	R = 9.8887 \pm 0.0010 k\Omega 
-	 \end{eqnarray*}
+	 \begin{equation} 
+	 	R =( 9.8887 \pm 0.0010) k\Omega 
+	 \end{equation}
 \end{Large}
 
 \subsection {Incertezza sui tempi}
@@ -139,7 +139,7 @@ Quindi si ricava l'incertezza:
 Per rendere più elegante la scrittura del risultato senza intaccarne la validità, si decide di approssimarlo alla seconda cifra decimale.
 \begin{Large}
 	\begin{equation}
-  		{t_r}= 5.50\pm 0,04 \mu s
+  		{t_r}=( 5.50\pm 0,04 )\mu s
 	\end{equation}
 \end{Large}\\
 
@@ -156,7 +156,7 @@ Arrotondando:
 
 \begin{Large}
 	\begin{equation}
-  		{t_f}= 5.70\pm 0,04 \mu s
+  		{t_f}= (5.70\pm 0,04) \mu s
 	\end{equation}
 \end{Large}\\
 \begin{figure}[htp]
@@ -187,7 +187,7 @@ Arrotondando:
 
 \begin{Large}
 	\begin{equation}
-		{t_{r_{10x}}}= 975\pm 10 ns
+		{t_{r_{10x}}}= (975\pm 10) ns
 	\end{equation}
 \end{Large}\\
 
@@ -203,7 +203,7 @@ Arrotondando:
 
 \begin{Large}
 	\begin{equation}
-		t_{r_R}= 7.11\pm 0,04 \mu s
+		t_{r_R}=( 7.11\pm 0,04) \mu s
 	\end{equation}
 \end{Large}\\
 
@@ -224,7 +224,7 @@ Arrotondando:
 
 \begin{Large}
 	\begin{equation}
-		{t_{r_{R_{10x}}}}= 1300\pm 10 ns
+		{t_{r_{R_{10x}}}}= (1300\pm 10) ns
 	\end{equation}
 \end{Large}\\
 
@@ -244,29 +244,16 @@ Arrotondando:
 
 \begin{Large}
 	\begin{equation}
-		{T_s}= 1000 \pm 4\mu s 
+		{T_s}= (1000 \pm 4)\mu s 
 	\end{equation}
 \end{Large}\\
 
 
 \subsubsection{Frequenza segnale sinusoidale}
-%Essendo una misura indiretta l'incertezza totale è data dalla somma delle derivate parziali delle %componenti:
-%
-%\begin{Large}
-%	\begin{equation}
-%	{U_{f_s}}= |\frac{d\frac{1}{T_s}}{d{T_s}}|U_{{T_s}}
-%	\end{equation}
-%\end{Large}\\
-%Quindi l'incertezza:
-%\begin{Large}
-%	\begin{equation}
-%	{U_{f_s}}= \frac{1}{1000000}*4.1=4.1 Hz
-%	\end{equation}
-%\end{Large}\\
 Per quanto riguarda l'incertezza della frequenza, il calcolo è banale in quanto si ricorre alla stessa incertezza relativa al periodo del segnale sinusoidale con diversa unità di misura(\emph{Hz})
 \begin{Large}
 	\begin{equation}
-  		{f_s}= 1000\pm 4Hz
+  		{f_s}= (1000\pm 4)Hz
 	\end{equation}
 \end{Large}\\
 
@@ -309,7 +296,7 @@ Quindi:
 In conclusione: 
 \begin{Large}
 	\begin{equation}
-		C=0.325\pm 0.002nF
+		C=(0.325\pm 0.002)nF
 	\end{equation}
 \end{Large}\\
 
@@ -331,7 +318,7 @@ Quindi l'incertezza:
 Quindi in conclusione:
 \begin{Large}
 	\begin{equation}
-		{C_{10x}}= 59.7 \pm0.5 pF
+		{C_{10x}}=( 59.7 \pm0.5) pF
 	\end{equation}
 \end{Large}\\
 
@@ -342,19 +329,11 @@ Per quanto riguarda la misura della tensione picco-picco del segnale sinusoidale
 	\begin{equation}
 		U_{V_{p-p_{s}}}= [\pm 2.4\% rdg\pm 0.4\%FSO]
 	\end{equation}
-\end{Large}\\
-
-Quindi: 
-\begin{Large}
-	\begin{equation}
-		V_{p-p_{s}}= 3.938V\pm 0.0945V\pm 0.032V
-	\end{equation}
-\end{Large}\\
-
+\end{Large}\
 Arrotondando:
 \begin{Large}
 	\begin{equation}
-		V_{p-p_{s}}= 3.94\pm 0.13V
+		V_{p-p_{s}}= (3.94\pm 0.13)V
 \end{equation}
 \end{Large}\\
 
